[gd_scene load_steps=2 format=3 uid="uid://diao7nvslm1t1"]

[ext_resource type="Script" path="res://Actors/Attacks/projectile.gd" id="1_vht4v"]

[node name="Projectile" type="CharacterBody3D"]
script = ExtResource("1_vht4v")

[node name="Graphics" type="Node3D" parent="."]

[node name="LifeTimeTimer" type="Timer" parent="."]
one_shot = true

[node name="ShowTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="timeout" from="LifeTimeTimer" to="." method="_on_life_time_timer_timeout"]
[connection signal="timeout" from="ShowTimer" to="." method="_on_show_timer_timeout"]
